added react google places for autocompletion of possible places to visit when searching for destination

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,3 +30,7 @@ input[type=range] {
 	background-color: rgb(34, 119, 255) !important;
 	color: #fff !important;
 }
+
+.pointer {
+	cursor: pointer;
+}
