--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,3 +38,9 @@ input[type=range] {
 .css-1hwfws3 {
 	min-height: 60px;
 }
+
+/* .css-1hwfws3:before {
+	content: "This is CSS-generated.";
+	display: block;
+	position: absolute;
+} */
