--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,29 +1,29 @@
-/* input[type=range] {
-	-webkit-appearance: none;
-	width: 20%;
-	background: transparent;
+/* input[type='range'] {
+  -webkit-appearance: none;
+  width: 20%;
+  background: transparent;
 }
 
-input[type=range]::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	border: 1px solid #000000;
-	height: 36px;
-	width: 16px;
-	border-radius: 3px;
-	background: #ffffff;
-	cursor: pointer;
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
 
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
-input[type=range] {
-	width: 20%;
-	height: 14px;
-	cursor: pointer;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	background: #28b486;
-	border-radius: 1.3px;
-	border: 0.2px solid #010101;
+input[type='range'] {
+  width: 20%;
+  height: 14px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #28b486;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
 } */
 
 .active {
@@ -112,4 +112,31 @@ input[type=range] {
 
 .star-color {
   color: orange !important;
+}
+
+.ant-menu-item-selected {
+  color: white;
+}
+
+@media (max-width: 767px) {
+  .hotel-img {
+    margin: 0 !important;
+  }
+
+  .browse-button {
+    margin-bottom: 3rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .search-form {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 500px) {
+  .card-title {
+    display: flex;
+    flex-direction: column;
+  }
 }
